test_suite/tests/ui/precondition/deserialize_dst.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
struct S {
    string: String,
    slice: [u8],
}

fn main() {}
